--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -20,7 +20,6 @@ body {
   color: rgb(var(--foreground-rgb));
 }
 
-mantine-UnstyledButton
-a[class^="mantine-UnstyledButton"] {
+a.[class^="mantine-UnstyledButton"] {
   border-radius: 0.5rem;
 }
